第一版本提交

--- a/uni-admin后台管理系统基础框架/package.json
+++ b/uni-admin后台管理系统基础框架/package.json
@@ -46,7 +46,9 @@
 		"type": "unicloud-template-project"
 	},
 	"uni_modules": {
-		"dependencies": [],
+		"dependencies": [
+			
+		],
 		"encrypt": [],
 		"platforms": {
 			"cloud": {
